# linux-mail-forwarder

./: pyproject.toml
linux_mail_forwarder/: mail-forwarder.py  mailbox-forwarder.py
